--- a/package.json
+++ b/package.json
@@ -3,10 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "4",
     "cra-template": "1.1.2",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.6.4",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3"
+    "react-popper": "1.3.6",
+    "react-scripts": "4.0.3",
+    "reactstrap": "^8.10.0",
+    "typeface-lobster": "^1.1.13",
+    "typeface-open-sans": "^1.1.13"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -33,6 +39,7 @@
     ]
   },
   "devDependencies": {
+    "@types/reactstrap": "^8.7.2",
     "web-vitals": "^2.1.0"
   }
 }
