--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "react-bootstrap": "^1.6.4",
     "react-dom": "^17.0.2",
     "react-popper": "1.3.6",
+    "react-redux": "7.2.0",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.3",
     "reactstrap": "^8.10.0",
+    "redux": "4.0.5",
     "typeface-lobster": "^1.1.13",
     "typeface-open-sans": "^1.1.13"
   },
